--- a/Fake Store/Views/_ViewImports.cshtml
+++ b/Fake Store/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Fake_Store
 @using Fake_Store.Models
+@using Fake_Store_Domain.Models
+@using ReflectionIT.Mvc.Paging;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ReflectionIT.Mvc.Paging
