--- a/Fake Store/Views/Home/Index.cshtml
+++ b/Fake Store/Views/Home/Index.cshtml
@@ -36,7 +36,10 @@
                         </div>
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto"
+                               asp-controller="CarrinhoCompra"
+                               asp-action="AdicionarItemNoCarrinho" asp-route-lancheId="@intem.id">
+                            Add to cart</a></div>
                         </div>
                     </div>
                 </div>
