--- a/Fake Store/Views/Home/List.cshtml
+++ b/Fake Store/Views/Home/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReflectionIT.Mvc.Paging.PagingList<Produtos>
+﻿@model ReflectionIT.Mvc.Paging.PagingList<Product>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -10,8 +10,8 @@
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Todos Os produtos</h1>
-            <p class="lead fw-normal text-white-50 mb-0">Todos Os produtos</p>
+            <h1 class="display-4 fw-bolder">Todos Os Product</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Todos Os Product</p>
         </div>
     </div>
 </header>
